# djangoquick

./: pyproject.toml
app/authenticate/: admin.py  models.py  serializers.py  urls.py  views.py
app/authenticate/migrations/: 0001_initial.py  0002_alter_user_options_alter_user_managers_and_more.py  0003_user_company_alter_user_is_company_owner.py
app/companies/: admin.py  models.py  permissions.py  serializers.py  urls.py  views.py
app/companies/migrations/: 0001_initial.py
app/core/: settings.py  urls.py
app/storages/: admin.py  models.py  permissions.py  serializers.py  urls.py  views.py
app/storages/migrations/: 0001_initial.py
